# addsalmon

./: LICENSE  README.md  environment.yml  pyproject.toml  setup.py
files/: DDS.md  SRS.md  datasets.md
src/addsalmon_pipe/: cli.py  core.py
src/addsalmon_pipe.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/addsalmon_pipe/analysis/: differential.py  plotting.py
src/addsalmon_pipe/branches/: alignment.py  salmon.py
