[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "addsalmon_pipe"
version = "0.1.0"
description = "A dual-branch RNA-seq pipeline for anRNALab"
authors = [{name = "KL"}]
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "scikit-learn"
]

[project.scripts]
rnasalmon-pipe = "addsalmon_pipe.cli:main"